@startuml
state Cancelled
state Claiming_in_Progress
state Expired  :entry / invalidateOfferDataAction()
state Offered
state Requested
state Cancelled  :entry / invalidateOfferDataAction()
state Deferred
state Issued  :entry / invalidateOfferDataAction()
state Ready
[*] --> Offered : Created at start\n
note on link
Only for initial
 requests
not renewal
end note

[*] --> Requested : Created at start\n
note on link
Only for renewal
 requests
end note

Requested --> Issued : Issue
Requested --> Cancelled : Cancel
Requested --> Expired : Expire
Offered --> Cancelled : Cancel\n
note on link
Process can be
cancelled as long
as the vc is not ISSUED
end note

Offered --> Expired : Expire
Offered --> Claiming_in_Progress : Claim
Claiming_in_Progress --> Expired : Expire
Claiming_in_Progress --> Deferred : Defer
Claiming_in_Progress --> Issued : Issue\n
note on link
only no deferred
end note

Claiming_in_Progress --> Cancelled : Cancel
Deferred --> Ready : Ready\n[isDeferredOffer]
note on link
Guard to allow
READY transition
only for deferred offers
end note

Deferred --> Expired : Expire
Deferred --> Cancelled : Cancel
Ready --> Issued : Issue
Ready --> Expired : Expire
Ready --> Cancelled : Cancel
Ready --> Ready : Ready
Issued --> Issued : Issue
Issued --> Issued : Cancel
Cancelled --> Cancelled : Cancel
Expired --> Expired : Cancel
@enduml
